[package]
name = "web-watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[dependencies]
reqwest = {version = "0.11", features=["blocking"]}
sha2 = "0.10"
base64 = "0.20"
lettre = "0.10"
